--- a/src/locales/bg/common.json
+++ b/src/locales/bg/common.json
@@ -16,5 +16,22 @@
     "passengers": "Пътници",
     "searchBtn": "Търси",
     "hintOneway": "* При еднопосочен избери само дата на отлитане."
+  },
+   "login": {
+    "title": "Вход в AirNova",
+    "subtitle": "Управлявай полети, екипажи и маршрути на едно място.",
+    "signIn": "Влизане",
+    "welcomeBack": "Добре дошла обратно.",
+    "email": "Имейл",
+    "password": "Парола",
+    "remember": "Запомни ме",
+    "forgot": "Забравена парола?",
+    "submit": "Влез",
+    "loading": "Влизане...",
+    "noAccount": "Нямаш акаунт?",
+    "signUp": "Регистрация",
+    "show": "Покажи",
+    "hide": "Скрий",
+    "errorInvalid": "Невалиден имейл или парола"
   }
 }
