--- a/src/locales/bg/common.json
+++ b/src/locales/bg/common.json
@@ -33,5 +33,41 @@
     "show": "Покажи",
     "hide": "Скрий",
     "errorInvalid": "Невалиден имейл или парола"
+  },
+   "register": {
+    "title": "Създай акаунт в AirNova",
+    "subtitle": "Бърз старт с защитен достъп до панела.",
+    "header": "Регистрация",
+    "welcome": "Попълни имейл и парола.",
+    "email": "Имейл",
+    "password": "Парола",
+    "confirm": "Потвърди паролата",
+    "hint": "Минимум 8 символа.",
+    "submit": "Създай акаунт",
+    "loading": "Създаване...",
+    "hasAccount": "Вече имаш акаунт?",
+    "signIn": "Вход",
+    "errorMismatch": "Паролите не съвпадат.",
+    "errorWeak": "Паролата е твърде слаба (минимум 8 символа).",
+    "errorExists": "Имейлът вече съществува или заявката е неуспешна."
+  },
+   "profile": {
+    "firstName": "Име",
+    "lastName": "Фамилия",
+    "phone": "Телефон",
+    "dob": "Дата на раждане",
+    "country": "Държава (ISO2)",
+    "language": "Език",
+    "currency": "Валута"
+  },
+  "consents": {
+    "newsletter": "Искам да получавам оферти и новини по имейл.",
+    "terms1": "Създавайки акаунт, приемам",
+    "terms2": "Общите условия",
+    "terms3": "и Политиката за поверителност."
+  },
+  "register": {
+    "errorEmail": "Невалиден имейл.",
+    "errorTerms": "Трябва да приемеш Общите условия."
   }
 }
