--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -33,6 +33,37 @@
     "show": "Show",
     "hide": "Hide",
     "errorInvalid": "Invalid email or password"
+  },
+    "register": {
+    "title": "Create an AirNova account",
+    "subtitle": "Start quickly with secure access.",
+    "header": "Create account",
+    "welcome": "Enter your email and password.",
+    "email": "Email",
+    "password": "Password",
+    "confirm": "Confirm password",
+    "hint": "At least 8 characters.",
+    "submit": "Create account",
+    "loading": "Creating...",
+    "hasAccount": "Already have an account?",
+    "signIn": "Sign in",
+    "errorMismatch": "Passwords do not match.",
+    "errorWeak": "Password is too weak (min 8 chars).",
+    "errorExists": "Email already exists or request failed."
+  },
+    "profile": {
+    "firstName": "First Name",
+    "lastName": "Last Name",
+    "phone": "Phone",
+    "dob": "Date of Birth",
+    "country": "Country (ISO2)",
+    "language": "Language",
+    "save": "Save Profile",
+    "saving": "Saving...",
+    "errorInvalid": "Invalid input data.",
+    "errorExists": "Email already exists.",
+    "success": "Profile updated successfully."
   }
+  
 }
 
