--- a/src/locales/bg/common.json
+++ b/src/locales/bg/common.json
@@ -1,10 +1,12 @@
 {
   "brand": "AirNova ✈",
-  "nav": { "flights": "Полет", "deals": "Оферти", "support": "Поддръжка", "signin": "Вход" },
+  "nav": { "flights": "Полети", "deals": "Оферти", "support": "Поддръжка", "signin": "Вход" },
+
   "hero": {
     "title": "Резервирай следващия си полет за секунди",
     "subtitle": "Умен търсач, seatmap в реално време, прозрачни цени."
   },
+
   "search": {
     "oneway": "Еднопосочен",
     "round": "Двупосочен",
@@ -17,7 +19,8 @@
     "searchBtn": "Търси",
     "hintOneway": "* При еднопосочен избери само дата на отлитане."
   },
-   "login": {
+
+  "login": {
     "title": "Вход в AirNova",
     "subtitle": "Управлявай полети, екипажи и маршрути на едно място.",
     "signIn": "Влизане",
@@ -34,10 +37,12 @@
     "hide": "Скрий",
     "errorInvalid": "Невалиден имейл или парола"
   },
-   "register": {
+
+  "register": {
     "title": "Създай акаунт в AirNova",
     "subtitle": "Бърз старт с защитен достъп до панела.",
     "header": "Регистрация",
+    "pageTitle": "Регистрация",
     "welcome": "Попълни имейл и парола.",
     "email": "Имейл",
     "password": "Парола",
@@ -47,27 +52,53 @@
     "loading": "Създаване...",
     "hasAccount": "Вече имаш акаунт?",
     "signIn": "Вход",
+    "optional": "Допълнителни детайли (по избор)",
+    "optionalHint": "Помагат при резервации и онлайн чек-ин.",
+    "errorEmail": "Невалиден имейл.",
+    "errorTerms": "Трябва да приемеш Общите условия.",
     "errorMismatch": "Паролите не съвпадат.",
     "errorWeak": "Паролата е твърде слаба (минимум 8 символа).",
     "errorExists": "Имейлът вече съществува или заявката е неуспешна."
   },
-   "profile": {
+
+  "profile": {
     "firstName": "Име",
     "lastName": "Фамилия",
     "phone": "Телефон",
     "dob": "Дата на раждане",
     "country": "Държава (ISO2)",
     "language": "Език",
-    "currency": "Валута"
+    "currency": "Валута",
+    "errorPhone": "Невалиден формат на телефон. Пример: +359888123456.",
+    "errorCountry": "Кодът на държава трябва да е ISO2 (напр. BG).",
+    "errorDob": "Невалидна дата."
   },
+
   "consents": {
     "newsletter": "Искам да получавам оферти и новини по имейл.",
     "terms1": "Създавайки акаунт, приемам",
     "terms2": "Общите условия",
     "terms3": "и Политиката за поверителност."
   },
-  "register": {
-    "errorEmail": "Невалиден имейл.",
-    "errorTerms": "Трябва да приемеш Общите условия."
+
+  "ui": {
+    "show": "Покажи",
+    "hide": "Скрий",
+    "whyRegister": "Защо да се регистрираш",
+    "benefits": {
+      "jwt": "JWT + Refresh (HttpOnly)",
+      "gateway": "Единен API Gateway",
+      "security": "Защитени API и автоматично подновяване",
+      "faster": "По-бързи резервации и чек-ин",
+      "preferences": "Запазени предпочитания (език/валута)"
+    }
+  },
+
+  "password": {
+    "empty": "Започни да пишеш…",
+    "weak": "Слаба",
+    "fair": "Задоволителна",
+    "good": "Добра",
+    "strong": "Силна"
   }
 }
